# haskell-appc

./: .gitignore  .travis.yml  appc.cabal  release
src/: Main.hs
src/Data/: AppContainer.hs
src/Data/AppContainer/: TH.hs  Types.hs
test/: Test.hs
