name:                appc
version:             0.0.1
license:             MIT
license-file:        LICENSE
author:              Tomas Carnecky
maintainer:          tomas.carnecky@gmail.com
category:            Data
build-type:          Simple
cabal-version:       >=1.10


library
    default-language:    Haskell2010
    hs-source-dirs:      src

    exposed-modules:
        Data.AppContainer.Types

    build-depends:
        base >=4.7 && <4.8,
        aeson,
        containers,
        semver,
        uuid,
        text


executable appc
    default-language:    Haskell2010
    hs-source-dirs:      src

    main-is:             Main.hs

    build-depends:
        base >=4.7 && <4.8,
        aeson,
        bytestring,
        containers,
        optparse-applicative,
        semver,
        uuid,
        text

    ghc-options: -Wall


test-suite spec
    default-language:    Haskell2010
    hs-source-dirs:      test

    main-is:             Test.hs
    type:                exitcode-stdio-1.0

    build-depends:
        base < 4.8,
        hspec,
        smallcheck,
        hspec-smallcheck,
        appc,
        text,
        semver,
        uuid,
        aeson
